--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "puppeteer-api",
+  "name": "hlgaming-puppeteer-api",
   "version": "1.0.0",
-  "description": "Koyeb Puppeteer API for HL Gaming",
+  "description": "Puppeteer Automation for HL Gaming API",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "chrome-aws-lambda": "^10.1.0",
     "express": "^4.19.2",
-    "puppeteer-core": "^10.1.0"
+    "puppeteer": "^22.5.0"
   }
 }
